networking/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-http-gw
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: httpd-http
        protocol: HTTP
      hosts:
        - "*"
