networking/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: my-service-entry
spec:
  hosts:
  - ytechnologies.org
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: http
  resolution: DNS
