networking/virtual-service-on-user.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-based-on-user
spec:
  hosts:
  - "*"
  gateways:
    - my-http-gw
  http:
  - match:
    - headers:
        end-user:
          exact: unknown
    route:
    - destination:
        host: nginx
