networking/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-http-vs
spec:
  hosts:
    - "*"  # Replace this with the actual host if applicable
  gateways:
    - my-http-gw
  http:
    - match:
        - uri:
            prefix: "/" # Change this to match the URL path if needed
      route:
        - destination:
            host: httpd # Service name to route traffic to
            port:
              number: 80 # Port number of the service
